--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -2,6 +2,7 @@
    font-family: 'Neue Machina';
    src: url('../font/neue-machina-regular.otf');
 }
+
 .header {
    display: flex;
    flex-direction: column;
@@ -17,5 +18,46 @@
 .header .title {
    font-family: 'Neue Machina';
    text-align: center;
+}
+
+.header .information {
+   display: flex;
+   flex-direction: column;
+   align-items: flex-start;
+   width: 100%;
+}
+
+.header .information p {
+   display: flex;
+   flex-direction: row;
+   align-items: center;
+   margin: .5rem;
+   font-size: 1.125rem;
+}
+
+.header .information p::before {
+   content: '';
+   display: inline-block;
+   width: 1rem;
+   height: 1rem;
+   background-repeat: no-repeat;
+   background-size: contain;
+   margin-right: .5rem;
+}
+
+.information .job::before {
+   background-image: url(../../assets/img/icons/job.svg);
+}
+
+.information .location::before {
+   background-image: url(../../assets/img/icons/location.svg);
+}
+
+.information .email::before {
+   background-image: url(../../assets/img/icons/email.svg);
+}
+
+.information .phone::before {
+   background-image: url(../../assets/img/icons/phone.svg);
 }
 
