Adicionado a responsividade no projeto

--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -7,6 +7,20 @@
    display: flex;
    flex-direction: column;
    align-items: center;
+   position: relative;
+}
+
+.header::after {
+   content: '';
+   display: inline-block;
+   position: absolute;
+   top: 1rem;
+   right: 1rem;
+   width: 2rem;
+   height: 2rem;
+   background-repeat: no-repeat;
+   background-size: contain;
+   background-image: url(../../assets/img/icons/header.svg);
 }
 
 .header .photo {
@@ -60,5 +74,32 @@
 
 .information .phone::before {
    background-image: url(../../assets/img/icons/phone.svg);
+}
+
+@media only screen and (min-width: 768px) {
+
+   .header {
+      display: grid;
+      grid-template-areas: 
+      "photo title"
+      "photo information"
+      ;
+   }
+
+   .header .photo {
+      grid-area: photo;
+      margin: 0 auto;
+   }
+
+   .header .title {
+      grid-area: title;
+      text-align: start;
+      max-width: 210px;
+   }
+
+   .header .information {
+      grid-area: information;
+   }
+   
 }
 
