--- a/assets/css/acordeon.css
+++ b/assets/css/acordeon.css
@@ -5,6 +5,13 @@
    margin: 1rem 0;
    border: 1px solid #fff;
    border-radius: 1rem;
+   transition: .25s;
+}
+
+.acordeon.open,
+.acordeon:hover {
+   background-color: #555696;
+   border-color: #555696;
 }
 
 .acordeon .trigger {
@@ -20,6 +27,28 @@
    border: none;
 }
 
+.acordeon .trigger:hover {
+   cursor: pointer;
+}
+
+.acordeon .trigger::after {
+   content: '';
+   display: inline-block;
+   width: 1.5rem;
+   height: 1.5rem;
+   background-repeat: no-repeat;
+   background-size: contain;
+   background-image: url(../../assets/img/icons/arrow-top.svg);
+}
+
+.acordeon.open .trigger::after {
+   transform: rotate(180deg);
+}
+
 .acordeon .content {
    display: none;
+}
+
+.acordeon.open .content {
+   display: inline-block;
 }
