Adicionado animações no acordeon

--- a/assets/css/acordeon.css
+++ b/assets/css/acordeon.css
@@ -39,6 +39,7 @@
    background-repeat: no-repeat;
    background-size: contain;
    background-image: url(../../assets/img/icons/arrow-top.svg);
+   transition: .25s;
 }
 
 .acordeon.open .trigger::after {
@@ -46,9 +47,15 @@
 }
 
 .acordeon .content {
-   display: none;
+   overflow: hidden;
+   height: 0;
+   opacity: 0;
+   transition: .25s;
+   transform: opacity .25s ease-in-out;
 }
 
 .acordeon.open .content {
    display: inline-block;
+   height: auto;
+   opacity: 1;
 }
