Estilizado a listagem de idiomas

--- a/assets/css/acordeon.css
+++ b/assets/css/acordeon.css
@@ -55,7 +55,8 @@
 }
 
 .acordeon.open .content {
-   display: inline-block;
+   display: block;
+   padding: 0 1rem 1rem 2rem;
    height: auto;
    opacity: 1;
 }
