Adicionado links de telefone, e-mail e LinkedIn

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -10,6 +10,15 @@ body {
    color: #fff;
 }
 
+a {
+   color: #fff;
+   text-decoration: none;
+}
+
+a:hover {
+   text-decoration: underline;
+}
+
 /*
 .background {
    background: linear-gradient(-02turn, #000, #00F, #00008b);
