Atualizações nas informações pessoais e softs skills no projeto

--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -35,6 +35,10 @@
    text-align: center;
 }
 
+.header .title span {
+   margin-left: 10px;
+}
+
 .header .information {
    display: flex;
    flex-direction: column;
