--- a/assets/css/skills.css
+++ b/assets/css/skills.css
@@ -16,8 +16,8 @@
 }
 
 .skills .tools ul li img {
-   width: 50px;
-   height: 50px;
+   max-width: 50px;
+   max-height: 50px;
    margin: 0 .5rem;
 }
 
