--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -5,8 +5,19 @@
    font-family: 'Open Sans', sans-serif;
 }
 
+html {
+   background:
+      linear-gradient(27deg, #151515 5px, transparent 5px) 0 5px,
+      linear-gradient(207deg, #151515 5px, transparent 5px) 10px 0px,
+      linear-gradient(27deg, #222 5px, transparent 5px) 0px 10px,
+      linear-gradient(207deg, #222 5px, transparent 5px) 10px 5px,
+      linear-gradient(90deg, #1b1b1b 10px, transparent 10px),
+      linear-gradient(#1d1d1d 25%, #1a1a1a 25%, #1a1a1a 50%, transparent 50%, transparent 75%, #242424 75%, #242424);
+      background-color: #131313;
+   background-size: 20px 20px;
+}
+
 body {
-   background-color: #000;
    color: #fff;
 }
 
@@ -19,32 +30,11 @@ a:hover {
    text-decoration: underline;
 }
 
-/*
-.background {
-   background: linear-gradient(-02turn, #000, #00F, #00008b);
-}
-*/
-
 .main {
    margin: 1rem;
    padding: 1rem;
    border: 1px solid #fff;
    border-radius: 1rem;
-}
-
-.main::before,
-.main::after {
-   content: '';
-   background-image: url('../../assets/img/background.svg');
-   background-repeat: no-repeat;
-   background-size: contain;
-   display: inline-block;
-   position: fixed;
-   top: 0;
-   left: 0;
-   width: 140vh;
-   height: 100vh;
-   z-index: -1;
 }
 
 .main::after {
