--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -15,7 +15,7 @@
    margin: 1rem 0;
 }
 
-.portfolio li .title {
+.portfolio li h3 {
    display: flex;
    flex-direction: row;
    align-items: center;
@@ -25,7 +25,11 @@
    margin-bottom: .5rem;
 }
 
-.portfolio li .title.github::before {
+.portfolio li span {
+   margin-top: 10px;
+}
+
+.portfolio li .github::before {
    content: '';
    display: inline-block;
    width: 1rem;
