--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -36,6 +36,6 @@
    height: 1rem;
    background-repeat: no-repeat;
    background-size: contain;
-   background-image: url(../../assets/img/icons/github.svg);
+   background-image: url('../../assets/img/icons/github.svg');
    margin-right: .5rem;
 }
